# atreus

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  renovate.json
.github/workflows/: build.yml  deploy-dashboard.yml  deploy-worker.yml  deploy.yml  test.yml
.run/: Run all.run.xml  Run server.run.xml  dashboard dev.run.xml  dev.run.xml  go build worker-go.run.xml  migrate.run.xml  next.run.xml  prisma_migrate.run.xml  studio.run.xml  worker.run.xml
dashboard/: .env  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  Dockerfile  fly.toml  ls-plugin.mjs  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  snowpack.config.cjs  svelte.config.cjs  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts  wmr.config.mjs
dashboard/.husky/: pre-commit
dashboard/prisma/: schema.prisma
dashboard/public/: env.d.ts  index.html  index.tsx  manifest.json
dashboard/public/components/: layout.tsx
dashboard/public/pages/: _404.tsx  home.tsx  index.tsx
dashboard/src/: ambient.d.ts  server.ts  service-worker.ts  template.html
dashboard/src/api/: targets.ts
dashboard/src/components/: AddRootDomainDialog.tsx  AddScopeDialog.tsx  Button.svelte  Button.tsx  Card.svelte  (+15 more)
server/: Cargo.toml
server/migrations/2021-02-18-084221_targets/: down.sql  up.sql
server/src/: api.rs  db.rs  main.rs  models.rs  schema.rs
worker/: .air.toml  .env  .gitignore  Cargo.toml  Dockerfile  diesel.toml  fly.toml  go.mod  go.sum  main.go  schema.prisma  sqlx-data.json  subfinder.go
worker-go/: .env  .gitignore  db.go  go.mod  go.sum  httpx.go  main.go  schema.prisma  subfinder.go
worker-go/db/: db.go
worker-go/log/: log.go
worker/amass/: example.config.ini
worker/db/: db.go
worker/log/: log.go
worker/src/: amass.rs  main.rs  postgres.rs  recon.rs  schema.rs
worker/test_fixtures/: amass.json
(+48 files in other folders)
