[package]
name = "server"
version = "0.1.0"
authors = ["Chrisando Pramudhita <chrsep@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"