[package]
name = "worker"
version = "0.1.0"
authors = ["Chrisando Pramudhita <chrsep@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8.1", features = ["full"] }
tokio-postgres = "0.7.2"
dotenv = "0.15.0"
