[package]
name = "worker"
version = "0.1.0"
authors = ["Chrisando Pramudhita <chrsep@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8.1", features = ["full"] }
dotenv = "0.15.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono" ] }
